--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -2,11 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph_home"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/businessListFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.currymonster.fusion.presentation.fragment.home.HomeFragment"
+        android:id="@+id/businessListFragment"
+        android:name="com.currymonster.fusion.presentation.fragment.businesslist.BusinessListFragment"
         android:label="@string/app_name">
 
         <argument
